--- a/templates/home/about.html
+++ b/templates/home/about.html
@@ -11,17 +11,17 @@
         </tr>
         <tr>
             <td>
-                <span>自拍是一种文化，一种新的表达和沟通方式<br>
-举起手机随时随地进入自拍模式，好友聚会拍照留念，出游拍照打卡记录，甚至连美食上桌先动的都不是筷子，
+                <span class="title">自拍是一种文化，一种新的表达和沟通方式</span><br>
+<span class="title_content">举起手机随时随地进入自拍模式，好友聚会拍照留念，出游拍照打卡记录，甚至连美食上桌先动的都不是筷子，
 而是手机或是相机拍照上传跟朋友分享。
 手机拍照及分享逐渐融入人们的生活，自拍已经成为一种“文化”—把我们自己放在舞台中心—全然地向别人
 表明我们的生活与想法。
-自拍承载着人们独特的审美观和价值观，是一种新的表达和沟通方式。<br>
+    自拍承载着人们独特的审美观和价值观，是一种新的表达和沟通方式。</span><br><br>
 “Luster Premium White执行长兼创办人布朗（Damon Brown）表示，“只要瞄一下脸书、推特、Instagram的
 帐户，就会知道‘00’后多喜欢自拍记录生活，尤其在亲友网络中分享...不只“00后”，多数人渡假时自拍，或
-和亲友庆祝一生中特别时刻自拍...如果你在渡假，或庆祝特殊日子时没自拍，就像没发生过这些事。 ” <br>
-                    共享是一种新的生活方式，是精神境界的升级
-共享租赁模式单车和充电宝起了个头，共享将扩展到其他生活场景。<br>
+                和亲友庆祝一生中特别时刻自拍...如果你在渡假，或庆祝特殊日子时没自拍，就像没发生过这些事。 ” </span><br>
+                <span class="title">共享是一种新的生活方式，是精神境界的升级</span><br>
+<span>共享租赁模式单车和充电宝起了个头，共享将扩展到其他生活场景。<br>
 懒人经济（便捷经济）,懒得携带，随用随还；
 经济发展物质富裕，物品拥有不再是财望的象征，占有意识下降，随用随取；
 文化发展而经济环保意识加强，合理利用，物品价值最大化，减少闲置而分时共享共用。
@@ -29,11 +29,11 @@
 “商品有两个价值属性，为使用价值和价值。使用价值时满足人们某种需要的属性，价值是凝结在商品
 中的无差别的人类劳动。在科技发达的今天，某些物品的价值很低，但使用价值却很大，比如：打火机，
 雨伞，自拍杆等。他们价值低（便宜），使用价值高（没它不行）～所以，是金子在不合适的地方也不
-会发光，需要把合适的东西放在和合适的场景，发挥它的使用价值；还有，不要看不起小玩意的大用途。”
+会发光，需要把合适的东西放在和合适的场景，发挥它的使用价值；还有，不要看不起小玩意的大用途。”</span>
 <br>
 
-关于自拍神器
-家里已买了2跟杆子的，上次出去旅游，忘了带了，又不想再买一根。
+<span class="title"> 关于自拍神器</span><br>
+<span>家里已买了2跟杆子的，上次出去旅游，忘了带了，又不想再买一根。
 虽然也就20-30块钱，但觉得挺浪费的，而且带着也不方便。
 经沟通，发现身边不少朋友有类似经历和情况。
 所以想，如果当时有个可以租用的，一次1-2块钱，那就好了，就在景区用。
