--- a/templates/home/home.html
+++ b/templates/home/home.html
@@ -5,37 +5,37 @@
 {% block title %}Home{% endblock %}
 
 {% block content %}
-    <table>
+    <table class="main_content">
         <tr>
             <td colspan="2"><img src="{% static 'images/home/page1_home_09.jpg' %}"></td>
         </tr>
         <tr>
             <td><img src="{% static 'images/home/page1_home_11.jpg' %}"></td>
-            <td><span>旅行应该是轻松的
-人生除了奋斗，还需要享受
-当你累时，你可去旅行
-享受自然的美丽，呼吸新鲜空气，交新朋友
-带着心灵去轻松旅行，不必大包小包全副武装
+            <td><span class="title">旅行应该是轻松的</span><br>
+<span>人生除了奋斗，还需要享受<br>
+当你累时，你可去旅行<br>
+享受自然的美丽，呼吸新鲜空气，交新朋友<br>
+带着心灵去轻松旅行，不必大包小包全副武装<br>
 你负责发现精彩，我负责备好自拍神器
 </span></td>
         </tr>
         <tr>
-            <td><span>手机拍照是必须的
-无拍照不分享，无分享不出游
-没有自拍，等于精彩没发生
-生活不易，唯有自拍证明你还存在
-自拍不是病而是文化，是新的沟通表达方式
+            <td><span class="title">手机拍照是必须的</span><br>
+<span>无拍照不分享，无分享不出游<br>
+没有自拍，等于精彩没发生<br>
+生活不易，唯有自拍证明你还存在<br>
+自拍不是病而是文化，是新的沟通表达方式<br>
 举起手机随时自拍，打卡签到记录
 </span></td>
             <td><img src="{% static 'images/home/page1_home_14.jpg' %}"></td>
         </tr>
         <tr>
             <td><img src="{% static 'images/home/page1_home_16.jpg' %}"></td>
-            <td><span>自拍杆是随手可用的
-手短镜头近，自拍杆来搞定
-美景精彩全入镜，只需自拍神器
-任意狂拍不求人，共享自拍神器随你嗨
-自拍神器遍布景点，随手可借还省事
+            <td><span class="title">自拍杆是随手可用的</span><br>
+<span>手短镜头近，自拍杆来搞定<br>
+美景精彩全入镜，只需自拍神器<br>
+任意狂拍不求人，共享自拍神器随你嗨<br>
+自拍神器遍布景点，随手可借还省事<br>
 微信支付宝扫码即用，方便快捷又简单
 </span></td>
         </tr>
