--- a/templates/home/ownpic.html
+++ b/templates/home/ownpic.html
@@ -5,7 +5,7 @@
 {% block title %}Home{% endblock %}
 
 {% block content %}
-    <table>
+    <table class="main_content">
         <tr>
             <td style="margin: 0;"><img src="{% static 'images/ownpic/page2-zipai.jpg' %}"></td>
         </tr>
