--- a/static/css/style.css
+++ b/static/css/style.css
@@ -1,6 +1,8 @@
-body {margin:0 auto; padding:0 auto; text-align:center; height: 100%; width: 60%;}
+body {margin:0 auto; padding:0 auto; text-align:center; height: 100%; width: 80%;}
 
 div{margin:0 auto;  text-align:center;}
+
+#head_top{float: left;width: 100%;}
 
 #logo img {float: left; width:auto; margin-left: 50px; margin-top: 20px;}
 
