--- a/templates/base.html
+++ b/templates/base.html
@@ -13,10 +13,10 @@
 
 </head>
 
-<body class="background">
+<body >
 <div id="head">
         <div id="logo">
-            <a href="/"><img alt="轻拍科技" src="{% static 'images/home/page1_home_03.jpg' %}" border="0"></a>
+            <a href="home.html"><img alt="轻拍科技" src="#" name="logo" onMouseOver="this.src='{% static 'images/logo1.jpg.jpg' %}'" onMouseOut="this.src='{% static 'images/logo2.jpg.jpg' %}'"  border="0"></a>
         </div>
 
         <div id="navigation">
