--- a/templates/base.html
+++ b/templates/base.html
@@ -14,7 +14,7 @@
 </head>
 
 <body >
-<div id="head">
+<div id="head_top">
         <div id="logo">
             <a href="home.html"><img alt="轻拍科技" src="#" name="logo" onMouseOver="this.src='{% static 'images/logo1.jpg.jpg' %}'" onMouseOut="this.src='{% static 'images/logo2.jpg.jpg' %}'"  border="0"></a>
         </div>
