--- a/templates/base.html
+++ b/templates/base.html
@@ -16,7 +16,7 @@
 <body >
 <div id="head_top">
         <div id="logo">
-            <a href="home.html"><img alt="轻拍科技" src="#" name="logo" onMouseOver="this.src='{% static 'images/logo1.jpg.jpg' %}'" onMouseOut="this.src='{% static 'images/logo2.jpg.jpg' %}'"  border="0"></a>
+            <a href="home.html"><img alt="轻拍科技" src="#" name="logo" onMouseOver="this.src='{% static 'images/logo1.jpg' %}'" onMouseOut="this.src='{% static 'images/logo2.jpg' %}'"  border="0"></a>
         </div>
 
         <div id="navigation">
