--- a/static/css/style.css
+++ b/static/css/style.css
@@ -1,10 +1,9 @@
-body {margin:0 auto; padding:0 auto; text-align:center; height: 100%; width: 80%;}
+{% load static/images %}
+body {margin:0 auto; padding:0 auto; text-align:center; height: 100%; width: 90%;}
 
-div{margin:0 auto;  text-align:center;}
+#head_top{float: left;width: 100%; height: 50px;}
 
-#head_top{float: left;width: 100%;}
-
-#logo img {float: left; width:auto; margin-left: 50px; margin-top: 20px;}
+#logo a {float: left; width:130px; height: 30px; margin-top: 10px;border: none; }
 
 #navigation ul.menu { float:right}
 
