--- a/templates/base.html
+++ b/templates/base.html
@@ -16,7 +16,7 @@
 <body >
 <div id="head_top">
         <div id="logo">
-          <a href="/"></a>
+          <a href="/" target="_self" title="回首页" ></a>
         </div>
 
         <div id="navigation">
