--- a/static/css/style.css
+++ b/static/css/style.css
@@ -8,7 +8,7 @@ body {margin:0 auto; padding:0 auto; text-align:center; height: 100%; width: 90%
 
 #navigation ul.menu { float:right; width: 500px;height: 50px;height: 50px;}
 #navigation menu { margin-right: 80%; list-style: none;}
-#navigation .menu > li { display: block; float: left;width: 100px; background-color: aqua; }
+#navigation .menu > li { display: block; float: left;width: 100px;text-align: right; }
 #navigation .menu > li a{color: black; }
 #navigation .menu > li a:hover{color: #9900cc; }
 
