--- a/static/css/style.css
+++ b/static/css/style.css
@@ -7,8 +7,8 @@ body {margin:0 auto; padding:0 auto; text-align:center; height: 100%; width: 90%
 #logo a:hover{ background: url("/static/images/logo2.jpg")  }
 
 #navigation ul.menu { float:right; height: 50px; text-align: right;}
-#navigation menu { margin-right: 80%; list-style: none; font-size: 16px;}
-#navigation .menu > li { display: block; float: left;width: 100px;text-align: right;margin-top: 5px; }
+#navigation menu { margin-right: 80%; list-style: none; }
+#navigation .menu > li { display: block; float: left;width: 100px;text-align: right;margin-top: 5px;font-size: 16px; }
 #navigation .menu > li a{color: black;text-decoration: none; }
 #navigation .menu > li a:hover{color: #9900cc; }
 
