--- a/static/css/style.css
+++ b/static/css/style.css
@@ -17,7 +17,7 @@ body {margin:0 auto; padding:0 auto; text-align:center; height: 100%; width: 90%
 
 #navigation { padding:0;}
 
-body a { color: black; text-decoration: none; margin: 10px; margin-right: 20px;}
+body a { color: black; text-decoration: none; }
 
 .title{color: darkorchid; font-size: 40px;}
 
@@ -28,5 +28,7 @@ body a { color: black; text-decoration: none; margin: 10px; margin-right: 20px;}
 .foot span img {vertical-align: 80%}
 
 .main_content {margin: 0 auto;}
+.main_content_home{width: 100%;position: relative;overflow: hidden;height: 530px; background-color: #9900cc;}
+.main_content_home_con{width:1920px; position: absolute; left: 50%;margin-left: -960px;background: url("/static/images/home/home_banner.jpg") }
 
 .title_content {text-indent:2em;}
