--- a/templates/home/home.html
+++ b/templates/home/home.html
@@ -5,6 +5,11 @@
 {% block title %}Home{% endblock %}
 
 {% block content %}
+    <div class="main_content_home">
+       <div class="main_content_home_con">
+
+       </div>
+    </div>
     <table class="main_content">
         <tr>
             <td colspan="2"><img src="{% static 'images/home/page1_home_09.jpg' %}"></td>
