--- a/static/css/style.css
+++ b/static/css/style.css
@@ -27,8 +27,8 @@ body a { color: black; text-decoration: none; }
 
 .foot span img {vertical-align: 80%}
 
-.main_content {margin: 0 auto;}
-.main_content_home{width: 100%;position: relative;overflow: hidden;height: 530px; background-color: #9900cc;}
+.main_content {margin: 0 auto; clear: both;}
+.main_content_home{width: 100%;position: relative;overflow: hidden;height: 530px; }
 .main_content_home_con{width:1920px; position: absolute; left: 50%;margin-left: -960px;background: url("/static/images/home/home_banner.jpg") }
 
 .title_content {text-indent:2em;}
