--- a/static/css/style.css
+++ b/static/css/style.css
@@ -28,7 +28,7 @@ body a { color: black; text-decoration: none; }
 .foot span img {vertical-align: 80%}
 
 .main_content {margin: 0 auto; clear: both;}
-.main_content_home{width: 100%;position: relative;overflow: hidden;height: 530px;background: url("/static/images/home/home_banner.jpg") }
-.main_content_home_con{width:1920px; position: absolute; left: 50%;margin-left: -960px; }
+.main_content_home{width: 1920px;position: absolute;overflow: hidden;height: 530px;background: url("/static/images/home/home_banner.jpg") }
+.main_content_home_con{ }
 
 .title_content {text-indent:2em;}
