--- a/templates/home/home.html
+++ b/templates/home/home.html
@@ -5,8 +5,8 @@
 {% block title %}Home{% endblock %}
 
 {% block content %}
-    <div class="main_content_home">
-       <div class="main_content_home_con">
+    <div class="main_content_home_out">
+       <div class="main_content_home">
 
        </div>
     </div>
