--- a/static/css/style.css
+++ b/static/css/style.css
@@ -33,4 +33,15 @@ body a { color: black; text-decoration: none; }
 .main_content_home{width:100%;height: 600px; margin-top: 5px; background-size:100% 100%; background: url("/static/images/home/home_banner.jpg") center no-repeat; }
 .main_content_home_con{width: 80%;height: 100%;margin: 0px auto;background-color: coral; }
 
+#main_home{width: 100%;height: 600px;position:fixed;
+top:0;
+left:0;
+bottom:0;
+right:0;
+z-index:-1;
+}
+#main_home > img{height:100%;
+width:100%;
+border:0;}
+
 .title_content {text-indent:2em;}
