调整官网首页

--- a/templates/home/home.html
+++ b/templates/home/home.html
@@ -5,8 +5,12 @@
 {% block title %}Home{% endblock %}
 
 {% block content %}
-    <div id="main_home">
-       <img src="{% static 'images/home/home_banner.jpg' %}">
+    <div class="main_home">
+       <div class="main_home_banner">
+
+           <img src="{% static 'images/home/home_banner.jpg' %}">
+       </div>
+
     </div>
     <table class="main_content">
         <tr>
