--- a/static/css/style.css
+++ b/static/css/style.css
@@ -33,11 +33,11 @@ body a { color: black; text-decoration: none; }
 .main_content_home{width:100%;height: 600px; margin-top: 5px; background-size:100% 100%; background: url("/static/images/home/home_banner.jpg") center no-repeat; }
 .main_content_home_con{width: 80%;height: 100%;margin: 0px auto;background-color: coral; }
 
-#main_home{width:100%;
+.main_home{width:100%;
             position:relative;
             overflow:hidden;
             height:600px; }
-#main_home_img{
+.main_home_img{
     width:1920px; /*图片宽度*/
             position:absolute;
             left:50%;
