调整官网首页

--- a/templates/home/home.html
+++ b/templates/home/home.html
@@ -6,7 +6,7 @@
 
 {% block content %}
     <div class="main_home">
-       <div class="main_home_banner">
+       <div class="main_home_img">
 
            <img src="{% static 'images/home/home_banner.jpg' %}">
        </div>
