--- a/static/css/style.css
+++ b/static/css/style.css
@@ -28,7 +28,6 @@ body a { color: black; text-decoration: none; }
 .foot span img {vertical-align: 80%}
 
 .main_content {margin: 0 auto; clear: both;}
-.main_home{position: relative;overflow: hidden;width: 100%;height: 600px;}
 .main_home_banner{position: absolute;top: 50%; left: 50%;display: block;min-width: 100%;min-height: 100%;background: url("/static/images/home/home_banner.jpg") center no-repeat;}
 .main_content_home{width:100%;height: 600px; margin-top: 5px; background-size:100% 100%; background: url("/static/images/home/home_banner.jpg") center no-repeat; }
 .main_content_home_con{width: 80%;height: 100%;margin: 0px auto;background-color: coral; }
@@ -38,10 +37,10 @@ body a { color: black; text-decoration: none; }
             overflow:hidden;
             height:600px; }
 .main_home_img{
-    width:1920px; /*图片宽度*/
+    width:1920px;
             position:absolute;
             left:50%;
-            margin-left:-960px; /*图片宽度的一半*/
+            margin-left:-960px;
 }
 
 .title_content {text-indent:2em;}
