--- a/static/css/style.css
+++ b/static/css/style.css
@@ -35,9 +35,11 @@ body a { color: black; text-decoration: none; }
 .main_home{width:100%;
             position:relative;
             overflow:hidden;
-            height:600px; }
+            height:600px;
+background-color: aliceblue;}
 .main_home_img{
     width:1920px;
+    height: auto;
             position:absolute;
             left:50%;
             margin-left:-960px;
