--- a/static/css/style.css
+++ b/static/css/style.css
@@ -35,14 +35,36 @@ body a { color: black; text-decoration: none; }
 .main_home{width:100%;
             position:relative;
             overflow:hidden;
-            height:600px;
-background-color: aliceblue;}
-.main_home_img{
-    width:1920px;
-    height: auto;
-            position:absolute;
-            left:50%;
-            margin-left:-960px;
+            height:500px; }
+.main_home_in{
+           height: 600px;
+           position:relative; }
+.imglist{
+    height: 600px;
+}
+#homecon{
+    position: relative;
+	height: 600px;
+	overflow: hidden;
+	position: absolute;
+	left: 50%;
+	margin-left: -586px;
+	overflow: hidden;
+	display: none;
+	z-index: 1000;
+}
+.imgList>banner{
+	height: 600px;
+	background-size: cover;
+	position: absolute;
+	left: 50%;
+	margin-left: -960px;
+	top: 0;
+	display: none;
 }
 
+.imgList>banner img {
+	width: 1920px;
+	height: 600px;
+}
 .title_content {text-indent:2em;}
