调整官网首页

--- a/templates/home/home.html
+++ b/templates/home/home.html
@@ -5,9 +5,9 @@
 {% block title %}Home{% endblock %}
 
 {% block content %}
-    <div class="main_home">
-       <div class="imglist">
-           <img src="{% static 'images/home/home_banner.jpg' %}">
+    <div class="main_content_home">
+       <div class="main_content_home_con">
+
        </div>
 
     </div>
