--- a/static/css/style.css
+++ b/static/css/style.css
@@ -29,7 +29,7 @@ body a { color: black; text-decoration: none; }
 
 .main_content {margin: 0 auto; clear: both;}
 .main_content_home{width:100%;height: 600px; margin-top: 5px; background-size:100% 100%; background: url("/static/images/home/home_banner.jpg") center no-repeat; }
-.main_content_home_con{width: 80%;height: 100%;margin: 0px auto;background-color: coral; }
+.main_content_home_con{width: 80%;height: 100%;margin: 0px auto;background: url("/static/images/home/home_slogn.png") left no-repeat;}
 
 
 .title_content {text-indent:2em;}
