--- a/templates/home/home.html
+++ b/templates/home/home.html
@@ -9,7 +9,7 @@
        <div class="main_content_home_con"></div>
     </div>
     <div class="home_cont">
-        <div class="home_cont_img"></div>
+        <div class="home_cont_img"><img src="{% static 'images/home/page1_home_11.jpg' %}"></div>
         <div class="home_cont_text">
             <span class="home_cont_title">旅行应该是轻松的</span><br>
 <span>人生除了奋斗，还需要享受<br>
