--- a/static/css/style.css
+++ b/static/css/style.css
@@ -57,6 +57,7 @@ body a { color: black; text-decoration: none; }
     font-size: 48px;
     color: #9900cc;
     line-height: 80px;
+    margin-top: 80px;
 }
 
 .title_content {text-indent:2em;}
