调整官网首页

--- a/templates/home/home.html
+++ b/templates/home/home.html
@@ -8,7 +8,7 @@
     <div class="main_content_home">
        <div class="main_content_home_con"></div>
     </div>
-    <div class="home_cont">
+    <div class="home_cont huibg martop">
         <div class="home_cont_img"><img src="{% static 'images/home/page1_home_11.jpg' %}"></div>
         <div class="home_cont_text">
             <span class="home_cont_title">旅行应该是轻松的</span><br>
