--- a/static/css/style.css
+++ b/static/css/style.css
@@ -31,14 +31,15 @@ body a { color: black; text-decoration: none; }
 .main_content_home{width:100%;height: 600px; margin-top: 5px; background-size:100% 100%; background: url("/static/images/home/home_banner.jpg") center no-repeat; }
 .main_content_home_con{width: 80%;height: 100%;margin: 0px auto;background: url("/static/images/home/home_slogn.png") left no-repeat;}
 
-.martop{margin-top: 50px;}
-.huibg{background-color: #eeeeee;}
+
 .home_cont{
     width: 80%;
     margin: 0px auto;
     clear: both;
     height: 100%;
     text-align: left;
+    margin-top: 50px;
+    background-color: #eeeeee;
 }
 .home_cont_img{
     float: left;
