--- a/static/css/style.css
+++ b/static/css/style.css
@@ -39,7 +39,7 @@ body a { color: black; text-decoration: none; }
     height: 100%;
     text-align: left;
     margin-top: 50px;
-    background-color: #eeeeee;
+    background-color: #cccccc;
 }
 .home_cont_img{
     float: left;
