--- a/static/css/style.css
+++ b/static/css/style.css
@@ -36,7 +36,7 @@ body a { color: black; text-decoration: none; }
     width: 80%;
     margin: 0px auto;
     clear: both;
-    height: 100%;
+    height: 428px;
     text-align: left;
     margin-top: 50px;
     background-color: #cccccc;
