--- a/static/css/style.css
+++ b/static/css/style.css
@@ -39,7 +39,7 @@ body a { color: black; text-decoration: none; }
     height: 428px;
     text-align: left;
     margin-top: 50px;
-    background-color: #cccccc;
+    background-color: #eeeeee;
 }
 .home_cont_img{
     float: left;
@@ -58,7 +58,7 @@ body a { color: black; text-decoration: none; }
     font-size: 48px;
     color: #9900cc;
     line-height: 80px;
-    margin-top: 80px;
+    margin-top: 180px;
 }
 
 .title_content {text-indent:2em;}
