--- a/static/css/style.css
+++ b/static/css/style.css
@@ -52,7 +52,8 @@ body a { color: black; text-decoration: none; }
     width: 50%;
     text-align: left;
     font-size: 18px;
-    line-height:428px;
+    line-height:40px;
+    padding-top: 100px;
 }
 .home_cont_title{
     font-size: 48px;
