--- a/static/css/style.css
+++ b/static/css/style.css
@@ -43,13 +43,13 @@ body a { color: black; text-decoration: none; }
 }
 .home_cont_img{
     float: left;
-    width: 40%;
+    width: 500px;
     height: 428px;
     border: none;
 }
 .home_cont_text{
     float: left;
-    width: 60%;
+    width: 500px;
     text-align: left;
     font-size: 20px;
     line-height:40px;
