--- a/static/css/style.css
+++ b/static/css/style.css
@@ -54,6 +54,7 @@ body a { color: black; text-decoration: none; }
     font-size: 20px;
     line-height:40px;
     padding-top: 80px;
+    padding-left: 80px;
 }
 .home_cont_title{
     font-size: 48px;
