--- a/static/css/style.css
+++ b/static/css/style.css
@@ -49,7 +49,7 @@ body a { color: black; text-decoration: none; }
 }
 .home_cont_text{
     float: left;
-    width: 500px;
+    margin-left: 520px;
     text-align: left;
     font-size: 18px;
     line-height:40px;
