--- a/static/css/style.css
+++ b/static/css/style.css
@@ -55,6 +55,7 @@ body a { color: black; text-decoration: none; }
     line-height:40px;
     padding-top: 70px;
     padding-left: 80px;
+    background-color: #eeeeee;
 }
 .home_cont_title{
     font-size: 48px;
