--- a/static/css/style.css
+++ b/static/css/style.css
@@ -39,6 +39,7 @@ body a { color: black; text-decoration: none; }
     height: 428px;
     text-align: left;
     margin-top: 50px;
+    background-color: coral;
 }
 .home_cont_img{
     float: left;
