--- a/static/css/style.css
+++ b/static/css/style.css
@@ -39,7 +39,6 @@ body a { color: black; text-decoration: none; }
     height: 428px;
     text-align: left;
     margin-top: 50px;
-    background-color: coral;
 }
 .home_cont_img{
     float: left;
@@ -48,6 +47,7 @@ body a { color: black; text-decoration: none; }
     border: none;
 }
 .home_cont_text{
+    float: left;
     margin-left: 510px;
     text-align: left;
     font-size: 18px;
