--- a/static/css/style.css
+++ b/static/css/style.css
@@ -48,7 +48,7 @@ body a { color: black; text-decoration: none; }
 }
 .home_cont_text{
     float: left;
-    margin-left: 510px;
+    width: 500px;
     text-align: left;
     font-size: 18px;
     line-height:40px;
