--- a/templates/home/home.html
+++ b/templates/home/home.html
@@ -8,6 +8,13 @@
     <div class="main_content_home">
        <div class="main_content_home_con"></div>
     </div>
+    <div class="cont_big">
+        共享，不是省钱，而是一种经济环保的精神；<br>
+共享，不是节约，而是一种精神境界的升级；<br>
+共享，不是将就，而是一种时尚和文化；<br>
+<span class="head1">轻拍科技，以共享自拍杆为基点，开启旅行共享时代，享受轻生活～</span>
+    </div>
+
     <div class="home_cont">
         <div class="home_cont_img"><img src="{% static 'images/home/page1_home_11.jpg' %}"></div>
         <div class="home_cont_text">
