--- a/static/css/style.css
+++ b/static/css/style.css
@@ -30,12 +30,14 @@ body a { color: black; text-decoration: none; }
 .main_content {margin: 0 auto; clear: both;}
 .main_content_home{width:100%;height: 600px; margin-top: 5px; background-size:100% 100%; background: url("/static/images/home/home_banner.jpg") center no-repeat; }
 .main_content_home_con{width: 80%;height: 100%;margin: 0px auto;background: url("/static/images/home/home_slogn.png") left no-repeat;}
-.head1{font-size: 120px;color: #9900cc}
-.head2{font-size: 60px;color: #9900cc}
-.head3{font-size: 30px; color: #9900cc}
+.head1{font-size: 60px;color: #9900cc;line-height: 80px;}
+.head2{font-size: 48px;color: #9900cc;line-height: 50px;}
+.head3{font-size: 24px; color: #9900cc;line-height: 30px;}
 .cont_big {
     width: 100%;
     clear: both;
+    font-size: 20px;
+    line-height: 36px;
 }
 }
 .home_cont{
