--- a/static/css/style.css
+++ b/static/css/style.css
@@ -32,7 +32,7 @@ body a { color: black; text-decoration: none; }
 .main_content_home_con{width: 80%;height: 100%;margin: 0px auto;background: url("/static/images/home/home_slogn.png") left no-repeat;}
 .head1{font-size: 48px;color: #9900cc;line-height: 48px;margin: 40px auto;}
 .head2{font-size: 36px;color: #9900cc;line-height: 36px;margin: 30px auto;}
-.head3{font-size: 24px; color: #9900cc;line-height: 24px;margin: 20px auto;}
+.head3{font-size: 24px; color:black;line-height: 24px;margin: 50px auto;}
 .cont_big {
     width: 100%;
     clear: both;
