调整官网首页

--- a/templates/home/home.html
+++ b/templates/home/home.html
@@ -9,10 +9,10 @@
        <div class="main_content_home_con"></div>
     </div>
     <div class="cont_big">
-        共享，不是省钱，而是一种经济环保的精神<br>
-共享,不是节约,而是一种精神境界的升级<br>
-共享,不是将就,而是一种时尚和文化<br>
-<span class="head2">轻拍科技,以共享自拍杆为基点,开启旅行共享时代,享受轻生活</span>
+        共享不是省钱,而是一种经济环保的精神<br>
+共享不是节约,而是一种精神境界的升级<br>
+共享不是将就,而是一种时尚和文化<br>
+<span class="head3">轻拍科技,以共享自拍杆为基点,开启旅行共享时代,享受轻生活</span>
     </div>
 
     <div class="home_cont">
