--- a/static/css/style.css
+++ b/static/css/style.css
@@ -30,9 +30,9 @@ body a { color: black; text-decoration: none; }
 .main_content {margin: 0 auto; clear: both;}
 .main_content_home{width:100%;height: 600px; margin-top: 5px; background-size:100% 100%; background: url("/static/images/home/home_banner.jpg") center no-repeat; }
 .main_content_home_con{width: 80%;height: 100%;margin: 0px auto;background: url("/static/images/home/home_slogn.png") left no-repeat;}
-.head1{font-size: 48px;color: #9900cc;line-height: 48px;margin: 40px auto;}
-.head2{font-size: 36px;color: #9900cc;line-height: 36px;margin: 30px auto;}
-.head3{font-size: 24px; color:black;line-height: 24px;margin: 50px auto;}
+.head1{font-size: 48px;color: #9900cc;line-height: 48px;}
+.head2{font-size: 36px;color: #9900cc;line-height: 36px;}
+.head3{font-size: 24px; color:black;line-height: 24px;}
 .cont_big {
     width: 100%;
     clear: both;
