--- a/static/css/style.css
+++ b/static/css/style.css
@@ -42,6 +42,15 @@ body a { color: black; text-decoration: none; }
     color: #666;
     margin: 30px auto;
 }
+.cont_big_gra {
+    width: 100%;
+    clear: both;
+    font-size: 20px;
+    line-height: 50px;
+    color: #666;
+    margin: 30px auto;
+    background-color: #eeeeee;
+}
 }
 .home_cont{
     width: 80%;
