--- a/templates/home/home.html
+++ b/templates/home/home.html
@@ -14,8 +14,8 @@
 共享不是将就,而是一种时尚潮流和生活方式<br>
 <span class="head2">轻拍科技,以共享自拍杆为基点,开启旅行共享时代,享受轻生活</span>
     </div>
-
-    <div class="home_cont">
+    <div class="cont_big_gra">
+       <div class="home_cont">
         <div class="home_cont_img"><img src="{% static 'images/home/page1_home_11.jpg' %}"></div>
         <div class="home_cont_text">
             <span class="home_cont_title">旅行应该是轻松的</span><br>
@@ -28,6 +28,7 @@
 
 
         </div>
+    </div>
     </div>
     <table class="main_content">
         <tr>
