--- a/static/css/style.css
+++ b/static/css/style.css
@@ -35,6 +35,7 @@ body a { color: black; text-decoration: none; }
 .head3{font-size: 24px; color:black;line-height: 60px;}
 .cont_big {
     width: 100%;
+    height: 300px;
     clear: both;
     font-size: 20px;
     line-height: 50px;
@@ -44,6 +45,7 @@ body a { color: black; text-decoration: none; }
 }
 .cont_big_gra {
     width: 100%;
+    height: 600px;
     clear: both;
     font-size: 20px;
     line-height: 50px;
