--- a/static/css/style.css
+++ b/static/css/style.css
@@ -41,11 +41,12 @@ body a { color: black; text-decoration: none; }
     line-height: 50px;
     padding: 50px;
     color: #666;
-    margin: 80px auto;
+    margin: 30px auto;
 }
 .cont_big_gra {
     width: 100%;
-    height: 600px;
+    height: 680px;
+    text-align: center;
     clear: both;
     font-size: 20px;
     line-height: 50px;
@@ -56,11 +57,9 @@ body a { color: black; text-decoration: none; }
 }
 .home_cont{
     width: 80%;
-    margin: 0px auto;
-    clear: both;
+    margin: 60px auto;
     height: 428px;
     text-align: left;
-    margin-top: 50px;
 }
 .home_cont_img{
     float: left;
