调整官网首页

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -60,6 +60,7 @@ body a { color: black; text-decoration: none; }
     margin: 60px auto;
     height: 428px;
     text-align: left;
+    background-color: #9900cc;
 }
 .home_cont_img{
     float: left;
