--- a/static/css/style.css
+++ b/static/css/style.css
@@ -59,7 +59,7 @@ body a { color: black; text-decoration: none; }
     width: 80%;
     margin: 60px auto;
     height: 428px;
-    text-align: left;
+    background-color: coral;
 }
 .home_cont_img{
     float: left;
