--- a/static/css/style.css
+++ b/static/css/style.css
@@ -56,7 +56,7 @@ body a { color: black; text-decoration: none; }
 }
 }
 .home_cont{
-    width: 80%;
+    width: 800px;
     margin: 60px auto;
     height: 108px;
     background-color: coral;
