--- a/static/css/style.css
+++ b/static/css/style.css
@@ -54,12 +54,13 @@ body a { color: black; text-decoration: none; }
     margin: 30px auto;
     background-color: #eeeeee;
 }
-}
+
 .home_cont{
-    width: 800px;
+    width: 80%;
+    height: 428px;
     margin: 60px auto;
-    height: 108px;
     background-color: coral;
+
 }
 .home_cont_img{
     float: left;
