--- a/static/css/style.css
+++ b/static/css/style.css
@@ -58,7 +58,7 @@ body a { color: black; text-decoration: none; }
 .home_cont{
     width: 80%;
     height: 428px;
-    margin: 60px auto;
+    margin-top: 100px;
     background-color: coral;
 
 }
