--- a/static/css/style.css
+++ b/static/css/style.css
@@ -57,8 +57,8 @@ body a { color: black; text-decoration: none; }
 
 .home_cont{
     width: 80%;
-    height: 428px;
-    margin-top: 100px;
+    height: 100%;
+    margin: 60px auto;
     background-color: coral;
 
 }
