--- a/static/css/style.css
+++ b/static/css/style.css
@@ -53,12 +53,12 @@ body a { color: black; text-decoration: none; }
     color: #666;
     margin: 30px auto;
     background-color: #eeeeee;
+    padding: 60px;
 }
 
 .home_cont{
     width: 80%;
     height: 100%;
-    margin: 60px auto;
     background-color: coral;
 
 }
