--- a/static/css/style.css
+++ b/static/css/style.css
@@ -53,17 +53,18 @@ body a { color: black; text-decoration: none; }
     color: #666;
     margin: 30px auto;
     background-color: #eeeeee;
-    padding: 60px;
 }
 
 .home_cont{
     width: 80%;
     height: 100%;
+    margin: 0px auto;
     background-color: coral;
 
 }
 .home_cont_img{
     float: left;
+    margin-top: 80px;
     width: 500px;
     height: 428px;
     border: none;
@@ -71,6 +72,7 @@ body a { color: black; text-decoration: none; }
 .home_cont_text{
     float: left;
     width: 500px;
+    margin-top: 80px;
     text-align: left;
     font-size: 18px;
     line-height:40px;
