--- a/templates/home/home.html
+++ b/templates/home/home.html
@@ -18,7 +18,7 @@
        <div class="home_cont">
            <div class="home_cont_img"><img src="{% static 'images/home/home_t1.png' %}"></div>
            <div class="home_cont_text">
-            <span class="home_cont_title">旅行应该是轻松的</span><br>
+            <span class="head1">旅行应该是轻松的</span><br>
             <span>人生除了奋斗，还需要享受<br>
                 当你累时，你可去旅行<br>
                 享受自然的美丽，呼吸新鲜空气，交新朋友<br>
