--- a/static/css/style.css
+++ b/static/css/style.css
@@ -33,6 +33,12 @@ body a { color: black; text-decoration: none; }
 .head1{font-size: 48px;color: black;line-height: 80px;}
 .head2{font-size: 36px;color: #9900cc;line-height: 70px;}
 .head3{font-size: 24px; color:black;line-height: 60px;}
+.col{color: #9900cc;}
+.rec{
+    font-size: 14px;
+    color: darkgrey;
+    margin-bottom: 80px;
+}
 .cont_big {
     width: 100%;
     height: 220px;
@@ -54,7 +60,6 @@ body a { color: black; text-decoration: none; }
     margin: 30px auto;
     background-color: #eeeeee;
 }
-
 .home_cont{
     width: 80%;
     height: 100%;
@@ -72,11 +77,6 @@ body a { color: black; text-decoration: none; }
     width: 500px;
     margin-top: 90px;
     text-align: left;
-}
-.home_cont_title{
-    font-size: 48px;
-    color: #9900cc;
-    line-height: 80px;
 }
 
 .title_content {text-indent:2em;}
