调整官网首页

--- a/templates/home/home.html
+++ b/templates/home/home.html
@@ -23,7 +23,7 @@
                 当你累时，你可去旅行<br>
                 享受自然的美丽，呼吸新鲜空气，交新朋友<br>
                 带着心灵去轻松旅行，不必大包小包全副武装<br>
-                你负责发现精彩，我负责备好自拍神器
+                你负责发现精彩，我负责备好自拍神器<br>
                 </span>
             <span class="rec">"旅行对我来说，是恢复青春活力的源泉。——安徒生"</span>
 
