--- a/static/css/style.css
+++ b/static/css/style.css
@@ -35,7 +35,9 @@ body a { color: black; text-decoration: none; }
 .head3{font-size: 24px; color:black;line-height: 60px;}
 .col{color: #9900cc;}
 .rec{
-    clear: both;
+    float: left;
+    width: 600px;
+    height: 100px;
     font-size: 36px;
     color: #9900cc;
     line-height: 80px;
@@ -78,6 +80,7 @@ body a { color: black; text-decoration: none; }
     width: 500px;
     margin-top: 90px;
     text-align: left;
+    height: 400px;
 }
 
 .title_content {text-indent:2em;}
