--- a/static/css/style.css
+++ b/static/css/style.css
@@ -37,10 +37,11 @@ body a { color: black; text-decoration: none; }
 .rec{
     float: left;
     width: 600px;
-    height: 100px;
+    height: 120px;
     font-size: 36px;
     color: #9900cc;
-    line-height: 80px;
+    line-height:50px;
+    margin-top: 80px;
 }
 .cont_big {
     width: 100%;
