--- a/templates/home/home.html
+++ b/templates/home/home.html
@@ -30,22 +30,23 @@
        </div>
     </div>
 
-
-     <div class="home_cont">
-         <div class="home_cont_img"><img src="{% static 'images/home/page1_home_11.jpg' %}"></div>
-         <div class="home_cont_text">
-            <span class="home_cont_title">旅行应该是轻松的</span><br>
+    <div class="cont_big_white">
+       <div class="home_cont">
+           <div class="home_cont_img_rig"><img src="{% static 'images/home/home_t1.png' %}"></div>
+           <div class="home_cont_text_rig">
+            <span class="head1">旅行应该是轻松的</span><br>
             <span>人生除了奋斗，还需要享受<br>
                 当你累时，你可去旅行<br>
                 享受自然的美丽，呼吸新鲜空气，交新朋友<br>
                 带着心灵去轻松旅行，不必大包小包全副武装<br>
-                你负责发现精彩，我负责备好自拍神器
+                你负责发现精彩，我负责备好自拍神器<br>
                 </span>
-
-
+            <div class="rec_rig">"旅行对我来说，是恢复青春活力的源泉。——安徒生"</div>
          </div>
        </div>
-    <table class="main_content">
+    </div>
+
+
         <tr>
             <td colspan="2"><img src="{% static 'images/home/page1_home_09.jpg' %}"></td>
         </tr>
