调整官网首页

--- a/templates/home/home.html
+++ b/templates/home/home.html
@@ -34,14 +34,14 @@
        <div class="home_cont">
            <div class="home_cont_img_rig"><img src="{% static 'images/home/home_t1.png' %}"></div>
            <div class="home_cont_text_rig">
-            <span class="head1">旅行应该是轻松的</span><br>
-            <span>人生除了奋斗，还需要享受<br>
-                当你累时，你可去旅行<br>
-                享受自然的美丽，呼吸新鲜空气，交新朋友<br>
-                带着心灵去轻松旅行，不必大包小包全副武装<br>
-                你负责发现精彩，我负责备好自拍神器<br>
+            <span class="head1">拍照是必须的</span><br>
+            <span>没有自拍，等于精彩没发生<br>
+               生活不易，唯有自拍证明你还存在<br>
+               自拍不是病而是文化，是新的沟通表达方式<br>
+               举起手机随时自拍，打卡签到记录
                 </span>
-            <div class="rec_rig">"旅行对我来说，是恢复青春活力的源泉。——安徒生"</div>
+
+               <div class="rec_rig">"好的照片，可以讲出一个故事，可以交流一种思想或表达一种感情。——陶然"</div>
          </div>
        </div>
     </div>
