调整官网首页

--- a/templates/home/home.html
+++ b/templates/home/home.html
@@ -41,7 +41,7 @@
                举起手机随时自拍，打卡签到记录
                 </span>
 
-               <div class="rec_rig">"好的照片，可以讲出一个故事，可以交流一种思想或表达一种感情。——陶然"</div>
+               <div class="rec_rig">"好的照片，可以讲出一个故事，可以交流一种思想或表达一种感情。——（中国摄影记者）陶然"</div>
          </div>
        </div>
     </div>
