--- a/templates/base.html
+++ b/templates/base.html
@@ -40,6 +40,15 @@
 {% block content %}
 {% endblock %}
 
+<div class="foot_con">
+    <div class="foot_con_img"><img src="{% static 'images/ewm.png' %}" alt="微信公众号"/></div>
+    <div class="foot_con_img"><img src="{% static 'images/ewm.png' %}" alt="微信公众号"/></div>
+    <div class="foot_con_img"><img src="{% static 'images/ewm.png' %}" alt="微信公众号"/></div>
+</div>
+<div class="foot_cont_bq">
+    上海轻拍网络科技有限公司 Copyright@2017 浙ICP备237970098号    咨询电话：0571-88809090 / 客服邮箱：kf@relalive.com
+</div>
+
 <div class="foot">
     <div align="center">
         <img src="{% static 'images/home/page1_home_20.jpg' %}" alt=""/>
