--- a/static/css/style.css
+++ b/static/css/style.css
@@ -21,11 +21,26 @@ body a { color: black; text-decoration: none; }
 
 .title{color: darkorchid; font-size: 40px;}
 
-.foot{ background-color: rgba(0, 0, 0, 0.7);}
-
-.foot span { color: white; vertical-align: 80%}
-
-.foot span img {vertical-align: 80%}
+.foot_con{width: 80%;
+    margin-top: 80px;
+    height: 300px;
+    margin: 60px auto;
+    text-align: center;
+    clear: both;}
+.foot_con_img {
+    float: left;
+    width: 200px;
+    height: 200px;
+    margin: 30px;
+    border: none;
+   }
+.foot_cont_bq{
+    width: 100%;
+    border-top: 1px #eeeeee;
+    text-align: center;
+    font-size: 14px;
+    color: darkgrey;
+}
 
 .main_content {margin: 0 auto; clear: both;}
 .main_content_home{width:100%;height: 600px; margin-top: 5px; background-size:100% 100%; background: url("/static/images/home/home_banner.jpg") center no-repeat; }
