--- a/templates/base.html
+++ b/templates/base.html
@@ -41,7 +41,9 @@
 {% endblock %}
 
 <div class="foot_con">
-    <div class="foot_con_img"><img src="{% static 'images/ewm.png' %}" alt="微信公众号"/></div>
+    <img class="foot_con_img" src="{% static 'images/ewm.png' %}" alt="微信公众号"/>
+    <img class="foot_con_img" src="{% static 'images/ewm.png' %}" alt="微信公众号"/>
+    <img class="foot_con_img" src="{% static 'images/ewm.png' %}" alt="微信公众号"/>
     <div class="foot_con_img"><img src="{% static 'images/ewm.png' %}" alt="微信公众号"/></div>
     <div class="foot_con_img"><img src="{% static 'images/ewm.png' %}" alt="微信公众号"/></div>
 </div>
