--- a/static/css/style.css
+++ b/static/css/style.css
@@ -22,13 +22,11 @@ body a { color: black; text-decoration: none; }
 .title{color: darkorchid; font-size: 40px;}
 
 .foot_con{width: 80%;
-    margin-top: 80px;
     height: 300px;
-    margin: 60px auto;
+    margin: 80px auto;
     text-align: center;
     clear: both;}
 .foot_con_img {
-    float: left;
     width: 200px;
     height: 200px;
     margin: 30px;
@@ -36,10 +34,12 @@ body a { color: black; text-decoration: none; }
    }
 .foot_cont_bq{
     width: 100%;
-    border-top: 1px #eeeeee;
+    height: 40px;
+    border-top: 1px #eeeeee solid;
     text-align: center;
     font-size: 14px;
-    color: darkgrey;
+    line-height: 40px;
+    color: #666666;
 }
 
 .main_content {margin: 0 auto; clear: both;}
