--- a/templates/base.html
+++ b/templates/base.html
@@ -46,7 +46,7 @@
     <img class="foot_con_img" src="{% static 'images/ewm.png' %}" alt="微信公众号"/>
 </div>
 <div class="foot_cont_bq">
-    上海轻拍网络科技有限公司 Copyright@2017 浙ICP备237970098号    咨询电话：0571-88809090 / 客服邮箱：kf@relalive.com
+    杭州轻拍科技有限公司&nbsp;&nbsp;&nbsp;|&nbsp;&nbsp;&nbsp;Copyright@2017 浙ICP备237970098号&nbsp;&nbsp;&nbsp;|&nbsp;&nbsp;&nbsp;咨询电话：0571-88809090 / 客服邮箱：kf@relalive.com
 </div>
 
 </body>
