调整官网首页

--- a/templates/base.html
+++ b/templates/base.html
@@ -41,9 +41,9 @@
 {% endblock %}
 
 <div class="foot_con">
-    <img class="foot_con_img" src="{% static 'images/ewm.png' %}" alt="微信公众号"/>
-    <img class="foot_con_img" src="{% static 'images/ewm.png' %}" alt="微信公众号"/>
-    <img class="foot_con_img" src="{% static 'images/ewm.png' %}" alt="微信公众号"/>
+    <img class="foot_con_img" src="{% static 'images/ewm.png' %}" alt="微信公众号"/>微信公众号即将推出
+    <img class="foot_con_img" src="{% static 'images/ewm.png' %}" alt="微信小程序"/>微信小程序即将推出
+    <img class="foot_con_img" src="{% static 'images/ewm.png' %}" alt="支付宝生活号"/>支付宝生活号即将推出
 </div>
 <div class="foot_cont_bq">
     杭州轻拍科技有限公司&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;|&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Copyright@2017 浙ICP备237970098号&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;|&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;咨询电话：0571-88809090&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;|&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;客服邮箱：kf@relalive.com
