--- a/static/css/style.css
+++ b/static/css/style.css
@@ -25,10 +25,17 @@ body a { color: black; text-decoration: none; }
     margin: 80px auto;
     text-align: center;
     clear: both;}
+.foot_con_imgbox {
+    width: 200px;
+    height: 300px;
+    margin: 30px;
+    line-height: 30px;
+    text-align: center;
+    border: none;
+   }
 .foot_con_img {
     width: 200px;
     height: 200px;
-    margin: 30px;
     border: none;
    }
 .foot_cont_bq{
