调整官网首页

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -33,6 +33,7 @@ body a { color: black; text-decoration: none; }
     text-align: center;
     border: none;
     float: left;
+    color: #666666;
    }
 .foot_con_img {
     width: 200px;
