--- a/static/css/style.css
+++ b/static/css/style.css
@@ -21,7 +21,7 @@ body a { color: black; text-decoration: none; }
 
 .title{color: darkorchid; font-size: 40px;}
 
-.foot_con{width: 80%;
+.foot_con{width: 780px;
     margin: 100px auto;
     text-align: center;
     clear: both;}
