调整官网首页

--- a/templates/home/ownpic.html
+++ b/templates/home/ownpic.html
@@ -6,16 +6,9 @@
 
 {% block content %}
     <div class="main_content_zp"></div>
+    <div class="zp_bd"><img src="{% static 'images/ownpic/bd.gif' %}"></div>
+    <div class="zp_bd_sm">我们在紧张研发中，客官敬请期待<br>
+自拍神器即将出炉…</div>
 
-    <table class="main_content_zp"></table>
-        <tr>
-            <td style="margin: 0;"><img src="{% static 'images/ownpic/page2-zipai.jpg' %}"></td>
-        </tr>
-        <tr>
-            <td style="height: 300px;"><span>我们在紧张研发中，客官敬请期待<br>
-自拍神器即将出炉…
-</span></td>
-        </tr>
-    </table>
 
 {% endblock %}
