调整官网首页

--- a/templates/home/ownpic.html
+++ b/templates/home/ownpic.html
@@ -7,7 +7,7 @@
 {% block content %}
     <div class="main_content_zp"></div>
     <div class="zp_bd"><img src="{% static 'images/ownpic/bd.gif' %}"></div>
-    <div class="zp_bd_sm">我们在紧张研发中，客官敬请期待<br>
+    <div class="zp_bd_sm">我们正紧张研发中，客官敬请期待<br>
 自拍神器即将出炉…</div>
 
 
