--- a/templates/home/home.html
+++ b/templates/home/home.html
@@ -2,7 +2,7 @@
 
 {% load static %}
 
-{% block title %}Home{% endblock %}
+{% block title %}首页{% endblock %}
 
 {% block content %}
     <div class="main_content_home">
