调整官网首页

--- a/templates/base.html
+++ b/templates/base.html
@@ -19,9 +19,10 @@
 
 <body >
 <div id="head_top">
+        <a href="/" target="_self" title="回首页" >
         <div id="logo">
-          <a href="/" target="_self" title="回首页" ></a>
-        </div>
+
+        </div></a>
 
         <div id="navigation">
             <ul class="menu">
