调整官网首页

--- a/templates/base.html
+++ b/templates/base.html
@@ -19,10 +19,12 @@
 
 <body >
 <div id="head_top">
-        <a href="/" target="_self" title="回首页" >
+
         <div id="logo">
 
-        </div></a>
+            <a href="/" target="_self" title="回首页"><img src="/static/images/logo1.jpg" border="0" onMouseOver="this.src='/static/images/logo2.jpg'" onMouseOut="this.src='/static/images/logo1.jpg'" /></a>
+
+        </div>
 
         <div id="navigation">
             <ul class="menu">
