调整官网首页

--- a/templates/home/about.html
+++ b/templates/home/about.html
@@ -5,7 +5,9 @@
 {% block title %}关于我们{% endblock %}
 
 {% block content %}
-    <div class="main_content_about"></div>
+    <div class="main_content_about">
+       <div class="about_slogn">践行共享模式 开创经济轻生活</div>
+    </div>
     <table>
         <tr>
             <td style="margin: 0;"><img src="{% static 'images/about/page3_about.jpg' %}"></td>
