调整官网首页

--- a/templates/home/about.html
+++ b/templates/home/about.html
@@ -6,7 +6,7 @@
 
 {% block content %}
     <div class="main_content_about">
-       <div class="about_sm"><div class="about_sm_til">践行共享模式 开创经济轻生活</div></div>
+       <div class="about_sm">践行共享新模式 开创经济轻旅行</div>
     </div>
     <table>
         <tr>
