调整官网首页

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -87,6 +87,7 @@ body a { color: black; text-decoration: none; }
     padding: 40px;
     color: #666;
     margin: 20px auto;
+    text-align: center;
 }
 .cont_big_gra {
     width: 100%;
