调整官网首页

--- a/templates/home/about.html
+++ b/templates/home/about.html
@@ -10,7 +10,7 @@
     </div>
     <div class="cont_big">
         <img src="{% static 'images/about/sad.png' %}">
-        <div class="head3">源自一次出游经历</div>
+        <div class="head3">源自一次留下遗憾的出游</div>
         <div class="about_story_cont">
             端午节家人一起到浙江舟山群岛玩，想多拍照留影，特别是记录家人在一起美好时刻。
             可自拍杆是忘了带，不想再买了。
