调整官网首页

--- a/templates/home/about.html
+++ b/templates/home/about.html
@@ -9,7 +9,7 @@
        <div class="about_sm">践行共享新模式 开创经济轻旅行</div>
     </div>
     <div class="cont_big">
-        <img src="{% static 'images/about/sad.png' %}">
+        <img class="about_story_img" src="{% static 'images/about/sad.png' %}">
         <div class="head3">源自一次留下遗憾的出游</div>
         <div class="about_story_cont">
             端午节家人一起到浙江舟山群岛玩，想多拍照留影，特别是记录家人在一起美好时刻。
