调整官网首页

--- a/templates/home/about.html
+++ b/templates/home/about.html
@@ -9,15 +9,16 @@
        <div class="about_sm">践行共享新模式 开创经济轻旅行</div>
     </div>
     <div class="cont_big">
+
+        <div class="head3">留有遗憾的出游</div>
         <img class="about_story_img" src="{% static 'images/about/sad.png' %}">
-        <div class="head3">源自一次留下遗憾的出游</div>
         <div class="about_story_cont">
-            端午节家人一起到浙江舟山群岛玩，想多拍照留影，特别是记录家人在一起美好时刻。
-            可自拍杆是忘了带，不想再买了。
-            觉得浪费，而且下次还可能忘带，因为家里已经有2根了。
-            几个人只能是交替沦为摄影师。不想找人帮忙拍照，看到好景色时旁边不一定有人，找人很难拍满意的，拍不满意又不好意思让人反复多拍。
-            这次难得的全家出游，没有合影照片记录。<br>
-            于是想，如果这时有个可以租自拍杆，花1-2块钱，租用几个小时，用好随处可还。也不用携带和购买，下次出游时到需要拍照的地方，再借再还。这多省事多方便！
+            端午节一家人到浙江舟山群岛玩，想多拍照留影，记录家人在一起美好时光。<br>
+            可自拍杆是忘了带，但不想再买。觉得浪费，且下次还可会带，因为家里已有2根了。<br>
+            大家交替沦为摄影师，不想找人帮拍。因到好景色需要拍时旁边没人，担心找人拍的满意又不好意思让人反复拍。<br>
+            结果这次难得的全家出游，没有合影照片记录...<br>
+            于是想，如果这时有租自拍杆的，花1～2块钱，租用几个小时，用好了还回去。<br>
+            自己就不用每次出游都带上了，需要自拍杆拍照时随手借一根，用完既还随借随还。这多省事多方便啊！
 
         </div>
     </div>
