调整官网首页

--- a/templates/home/about.html
+++ b/templates/home/about.html
@@ -9,7 +9,6 @@
        <div class="about_sm">践行共享新模式 开创经济轻旅行</div>
     </div>
     <div class="cont_big">
-
         <div class="head3">留有遗憾的出游</div>
         <img class="about_story_img" src="{% static 'images/about/sad.png' %}">
         <div class="about_story_cont">
@@ -21,6 +20,7 @@
             自己就不用每次出游都带上了，需要自拍杆拍照时随手借一根，用完既还随借随还。这多省事多方便啊！
         </div>
     </div>
+    <div class="about_fg"></div>
     <table>
         <tr>
             <td ></td>
