调整官网首页

--- a/templates/home/about.html
+++ b/templates/home/about.html
@@ -14,10 +14,10 @@
         <div class="about_story_cont">
             端午节一家人到浙江舟山群岛玩，想多拍照留影，记录家人在一起美好时光。<br>
             可自拍杆是忘了带，但不想再买。觉得浪费，且下次还可会带，因为家里已有2根了。<br>
-            大家交替沦为摄影师，不想找人帮拍。因到好景色需要拍时旁边没人，担心找人拍的满意又不好意思让人反复拍。<br>
+            大家相互沦为摄影师，不想找人帮拍。因到好景色需要拍时旁边没人，担心找人拍的满意又不好意思让人反复拍。<br>
             结果这次难得的全家出游，没有合影照片记录...<br>
-            于是想，如果这时有租自拍杆的，花1～2块钱，租用几个小时，用好了还回去。<br>
-            自己就不用每次出游都带上了，需要自拍杆拍照时随手借一根，用完既还随借随还。这多省事多方便啊！
+            <span class="col"> 于是想，如果这时有租自拍杆的，花1～2块钱，租用几个小时，用好了还回去。<br>
+            自己就不用每次出游都带上了，需要自拍杆拍照时随手借一根，用完既还随借随还。这多省事多方便！</span>
         </div>
     </div>
     <div class="about_fg"></div>
