调整官网首页

--- a/templates/home/about.html
+++ b/templates/home/about.html
@@ -9,7 +9,7 @@
        <div class="about_sm">践行共享新模式 开创经济轻旅行</div>
     </div>
     <div class="cont_big hig_story">
-        <div class="head3">留有遗憾的出游</div>
+        <div class="head3">源自有遗憾的出游</div>
         <img class="about_story_img" src="{% static 'images/about/sad.png' %}">
         <div class="about_story_cont">
             端午节一家人到浙江舟山群岛玩，想多拍照留影，记录家人在一起美好时光。<br>
