调整官网首页

--- a/templates/home/about.html
+++ b/templates/home/about.html
@@ -21,7 +21,7 @@
         </div>
     </div>
     <div class="about_fg"></div>
-    <div class="cont_big hig_story">
+    <div class="cont_big hig_yz">
         <div class="head3">我们要做的事</div>
         <img class="about_story_img" src="{% static 'images/about/jiejue.png' %}">
         <div class="about_story_cont">
@@ -35,15 +35,15 @@
     <div class="about_jx">
         <div class="head3">我们的坚信</div>
         <div class="about_jx_con">
-            <div class="head3">消费升级</div>
+            <div class="col">消费升级</div>
             消费升级和懒人经济的发展，消费者愿意为更好的体验，更便捷的服务买单。无需携带存放，随用随借，随借随还。
         </div>
         <div class="about_jx_con">
-            <div class="head3">消费升级</div>
+            <div class="col">消费升级</div>
             消费升级和懒人经济的发展，消费者愿意为更好的体验，更便捷的服务买单。无需携带存放，随用随借，随借随还。
         </div>
         <div class="about_jx_con">
-            <div class="head3">消费升级</div>
+            <div class="col">消费升级</div>
             消费升级和懒人经济的发展，消费者愿意为更好的体验，更便捷的服务买单。无需携带存放，随用随借，随借随还。
         </div>
     </div>
