调整官网首页

--- a/templates/home/home.html
+++ b/templates/home/home.html
@@ -41,7 +41,7 @@
                举起手机随时自拍，打卡签到记录
                 </span>
 
-               <div class="rec_rig">"好的照片，可以讲出一个故事，可以交流一种思想或表达一种感情。<br>--（中国摄影记者）陶然"</div>
+               <div class="rec_rig">"好的照片，可以讲出一个故事，可以交流一种思想或表达一种感情。"<br>--（中国摄影记者）陶然</div>
          </div>
        </div>
     </div>
@@ -57,7 +57,7 @@
                   自拍神器遍布景点，随手可借还省事<br>
                   微信支付宝扫码即用，方便快捷又简单<br>
                 </span>
-            <div class="rec">"有时候放弃并不是不爱，而是太麻烦而累觉不爱。<br>--网友"</div>
+            <div class="rec">"有时候放弃并不是不爱，而是太麻烦而累觉不爱。"<br>--网友</div>
          </div>
        </div>
     </div>
