调整官网首页

--- a/templates/base.html
+++ b/templates/base.html
@@ -22,7 +22,7 @@
 
         <div id="logo">
 
-            <a href="/" target="_self" title="回首页"><img src="/static/images/logo1.jpg" border="0" onMouseOver="this.src='/static/images/logo2.jpg'" onMouseOut="this.src='/static/images/logo1.jpg'" /></a>
+            <a href="/" target="_self" title="回首页"><img src="/static/images/logo1.png" border="0" onMouseOver="this.src='/static/images/logo2.png'" onMouseOut="this.src='/static/images/logo1.png'" /></a>
 
         </div>
 
