调整官网首页

--- a/templates/base.html
+++ b/templates/base.html
@@ -25,7 +25,6 @@
             <a href="/" target="_self" title="回首页"><img src="/static/images/logo1.png" border="0" onMouseOver="this.src='/static/images/logo2.png'" onMouseOut="this.src='/static/images/logo1.png'" /></a>
 
         </div>
-
         <div id="navigation">
             <ul class="menu">
                 <li>
@@ -42,6 +41,7 @@
                 </li>
             </ul>
         </div>
+        <div class="star"><a href="#" title="立即体验">立即体验</a></div>
 </div>
 
 {% block content %}
